[project]
name = "diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diffrax>=0.7.0",
    "einops>=0.8.1",
    "equinox>=0.12.2",
    "jax>=0.6.2",
    "jaxlib>=0.6.2",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "optax>=0.2.5",
    "tqdm>=4.67.1",
    "pillow>=10.0.0",
]
